Thu Mar  2 23:21:46 1995  John Gilmore  (gnu at toad.com)

	Make include files start to work on the Macintosh.

	* configure.in:  Add checks for sys/types.h and sys/stat.h.
	* k5-config.h:  Remove krb5/ from #include.
	* sysincl.h:  Avoid <sys/types.h>.  Conditional-include <sys/stat.h>.

Thu Mar 2 13:30:00 1995 Keith Vetter (keithv@fusion.com)

	* k5-config.h: changed NEED_WINSOCK_H to NEED_SOCKETS

Wed Mar 1 20:00:00 1995 Keith Vetter (keithv@fusion.com)

	* func-proto.h: fixed up a const attribute to krb5_send_tgs.

Wed Mar 1 17:40:00 1995 Keith Vetter (keithv@fusion.com)

	* func-proto.h: added missing prototype for krb5_mk_cred.
	* los-proto.h: added windows INTERFACE keyword to all functions,
	   plus added 2 missing prototypes: krb5_os_init_context and
	   krb5_os_free_context.

Wed Mar 1 12:48:20 1995 Keith Vetter (keithv@fusion.com)

	* config.h: added defines to pull in winsock.h as needed
        * rcache.h: added windows INTERFACE keyword to all functions
        * winsock.h: new file--for windows socket stuff

Wed Mar  1 17:45:13 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in, k5-config.h: Only define labs(x) -> abs(x) if
		labs() is not defined elsewhere.  (This really shouldn't
		be here at all, but is the expedient way to deal with lack
		of labs().)

	* Makefile.in: Change config.h -> k5-config.h and free.h ->
		k5-free.h to reflect renamed header files for Mac/PC port.

Mon Feb 27 23:47:58 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (osconf.h):  Remove temp file osconf.new.

	* krb5.h:  Rename to ../krb5.h so it can be #included by end users
	without the use of slashes or extra -I options.  First step in
	making it stand alone without a train of a dozen other include
	files tagging along behind.

	* base-defs.h, dbm.h, error_def.h, sysincl.h:  Avoid #include
	<krb5/...> form; use "..." form.

	* config.h:  Rename to k5-config.h.  This is too common a
	name, now that we use -I..../include/krb5.
	* free.h:  Rename to k5-free.h.
